# vscode-python-templates

./: LICENSE  README.md
fastapi-template/: .bumpversion.toml  .gitignore  README.md  fastapi-project-style.md  fastapi-template-doc.md  pyproject.toml
fastapi-template/.github/: copilot-instructions.md
fastapi-template/fastapi-docs/: api-routes.md  bumpversion-toml.md  create-app.md  data-models.md  dev-server.md  env-template.md  main-entry.md  package-init.md  project-structure.md  pyproject-toml.md  settings.md  tid-auth.md  vscode-config.md
fastapi-template/src/fastapi_template/: __init__.py  create_app.py  dev.py  gen_env_template.py  main.py  settings.py  tid_auth.py
fastapi-template/src/fastapi_template/data_models/: __init__.py  auth_models.py
fastapi-template/src/fastapi_template/routers/: __init__.py  api.py
